raw/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: demo13-raw

  labels:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/name: demo13-raw

  annotations:
    argocd.argoproj.io/sync-wave: "20"

spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: demo13-raw

  template:
    metadata:
      labels:
        app.kubernetes.io/name: demo13-raw

    spec:
      containers:
      - name: demo-webserver
        image: quay.io/jberchez-redhat/demo-webserver:v13.0-todel
        ports:
          - name: http
            containerPort: 8080
