raw/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: demo18-raw

  labels:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/name: demo18-raw

  annotations:
    argocd.argoproj.io/sync-wave: "22"

spec:
  port:
    targetPort: http

  tls:
    termination: edge

  to:
    kind: Service
    name: demo18-raw
    weight: 100

  wildcardPolicy: None
